--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         </div>
     </section>
     <section class="section flex">
-        <table id="table1" class="table">
-            <div class="notification is-primary">
-                <h2 class="subtitle banner">Period 1</h2>
-            </div>
+        <div class="notification is-primary">
+            <h2 class="subtitle banner">Period 1</h2>
+        </div>
+        <table id="table1" class="table is-narrow">
 
             <thead>
                 <tr>
@@ -108,7 +108,7 @@
 
         </table>
 
-        <table id="table2" class="table hidden">
+        <table id="table2" class="table is-narrow hidden">
             <thead>
                 <tr>
                     <th class="has-text-centered">Week</th>
@@ -192,7 +192,7 @@
 
         </table>
 
-        <table id="table3" class="table hidden">
+        <table id="table3" class="table is-narrow hidden">
             <thead>
                 <tr>
                     <th class="has-text-centered">Week</th>
@@ -276,7 +276,7 @@
 
         </table>
 
-        <table id="table4" class="table hidden">
+        <table id="table4" class="table is-narrow hidden">
             <thead>
                 <tr>
                     <th class="has-text-centered">Week</th>
