--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <button class="button">2</button>
                 <button class="button">3</button>
                 <button class="button">4</button>
+                <button class="button">5</button>
             </div>
         </section>
         <section class="section flex">
