--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <button class="button">3</button>
                 <button class="button">4</button>
                 <button class="button">5</button>
+                <button class="button">6</button>
             </div>
         </section>
         <section class="section flex">
@@ -55,7 +56,7 @@
             </table>
 
             <div class="notification is-primary">
-                <h2 class="subtitle banner">Funds due: 24/12/22</h2>
+                <h2 class="subtitle banner">Funds due: 04/03/2023</h2>
             </div>
 
         </section>
